WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280119
[GStreamer][WebRTC] ASSERTs due to access to MediaStreamTrackPrivate::source() from webrtcbin pc thread
https://bugs.webkit.org/show_bug.cgi?id=280119
Summary
[GStreamer][WebRTC] ASSERTs due to access to MediaStreamTrackPrivate::source(...
Philippe Normand
Reported
2024-09-21 04:30:44 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-09-21 04:34:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34033
EWS
Comment 2
2024-09-23 03:07:10 PDT
Committed
284064@main
(02558c78b21c): <
https://commits.webkit.org/284064@main
> Reviewed commits have been landed. Closing PR #34033 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-23 03:08:25 PDT
<
rdar://problem/136488013
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug