Cherry-pick 284064@main (02558c78b21c). https://bugs.webkit.org/show_bug.cgi?id=280119

[GStreamer][WebRTC] ASSERTs due to access to MediaStreamTrackPrivate::source() from webrtcbin pc thread
    https://bugs.webkit.org/show_bug.cgi?id=280119

    Reviewed by Xabier Rodriguez-Calvar.

    The GStreamerMediaEndpoint::preprocessStats was being called from the webrtcbin pc thread, leading
    to asserts in MediaStreamTrackPrivate::source(). This method is now called from the main thread.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::gatherStatsForLogging):
    (WebCore::GStreamerMediaEndpoint::preprocessStats):
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
    (WebCore::GStreamerStatsCollector::getStats):

    Canonical link: https://commits.webkit.org/284064@main

Canonical link: https://commits.webkit.org/282416.123@webkitglib/2.46